--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -42,6 +42,7 @@ jobs:
           push: ${{ github.event_name == 'push' }}
           load: ${{ github.event_name != 'push' }}
           tags: dlangtour/core-dreg:latest
+          context: .
 
       - name: Run test.sh
         run: ./test.sh "dlangtour/core-dreg:latest"
