--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Build image
         uses: docker/build-push-action@v2
         with:
-          push: ${{ github.event_name == 'push' }}
-          load: ${{ github.event_name != 'push' }}
+          push: false
+          load: false
           tags: dlangtour/core-dreg:latest
           context: .
 
